[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
)/
'''

[tool.poetry]
name = "djapi-blog"
version = "0.1.0"
description = "A blogging API based on the Django Rest Framework(DRF)"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
environs = {extras = ["django"], version = "^9.5.0"}
Django = "~=4.0.0"
djangorestframework = "~=3.13.0"
django-cors-headers = "~=3.10.0"
dj-rest-auth = "2.1.11"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
